[gd_scene load_steps=3 format=3 uid="uid://cl4irapwllp5n"]

[ext_resource type="Script" path="res://Scripts/UI/Action_UI_Slot.gd" id="1_0pqwq"]
[ext_resource type="Texture2D" uid="uid://bdg0o4am4gkcv" path="res://Assets/Mine/UI/Frame Original 64.png" id="1_dhefs"]

[node name="action_ui_slot 64" type="TextureButton"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
texture_normal = ExtResource("1_dhefs")
texture_pressed = ExtResource("1_dhefs")
texture_hover = ExtResource("1_dhefs")
texture_disabled = ExtResource("1_dhefs")
texture_focused = ExtResource("1_dhefs")
script = ExtResource("1_0pqwq")
icon_empty = ExtResource("1_dhefs")

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
